@@ -223,3 +223,219 @@ exports[`Deposits overview renders correctly 1`] = `
   </div>
 </div>
 `;
+
+exports[`Deposits overview renders on error correctly 1`] = `
+<div>
+  <div
+    class="wcpay-deposits-overview"
+  >
+    <p
+      class="wcpay-deposits-overview__schedule"
+    >
+      <svg
+        class="gridicon gridicons-calendar wcpay-deposits-overview__schedule-icon"
+        height="24"
+        viewBox="0 0 24 24"
+        width="24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <g>
+          <path
+            d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.105 0-2 .896-2 2v13c0 1.104.895 2 2 2h14c1.104 0 2-.896 2-2V6c0-1.104-.896-2-2-2zm0 15H5V8h14v11z"
+          />
+        </g>
+      </svg>
+      <span
+        class="wcpay-deposits-overview__schedule-label"
+      >
+        Deposit schedule:
+      </span>
+       
+      <span
+        class="wcpay-deposits-overview__schedule-value"
+      />
+    </p>
+    <div
+      aria-describedby="woocommerce-summary-helptext-2"
+      aria-label="Deposits overview"
+      aria-orientation="horizontal"
+      role="menu"
+    >
+      <p
+        class="screen-reader-text"
+        id="woocommerce-summary-helptext-2"
+      >
+        List of data points available for filtering. Use arrow keys to cycle through the list. Click a data point for a detailed report.
+      </p>
+      <ul
+        class="woocommerce-summary has-4-items"
+      >
+        <li
+          class="woocommerce-summary__item-container"
+        >
+          <div
+            class="woocommerce-summary__item"
+          >
+            <div
+              class="woocommerce-summary__item-label"
+            >
+              <p
+                class="css-101we7g-Text e15wbhsk0"
+              >
+                Last deposit
+              </p>
+            </div>
+            <div
+              class="woocommerce-summary__item-data"
+            >
+              <div
+                class="woocommerce-summary__item-value"
+              >
+                <p
+                  class="css-1ahfdc3-Text e15wbhsk0"
+                >
+                  N/A
+                </p>
+              </div>
+              <div
+                aria-label="No change from Previous Period:"
+                class="woocommerce-summary__item-delta"
+                role="presentation"
+              >
+                <p
+                  class="css-1qmnemh-Text e15wbhsk0"
+                >
+                  N/A
+                </p>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li
+          class="woocommerce-summary__item-container"
+        >
+          <div
+            class="woocommerce-summary__item"
+          >
+            <div
+              class="woocommerce-summary__item-label"
+            >
+              <p
+                class="css-101we7g-Text e15wbhsk0"
+              >
+                Next deposit
+              </p>
+            </div>
+            <div
+              class="woocommerce-summary__item-data"
+            >
+              <div
+                class="woocommerce-summary__item-value"
+              >
+                <p
+                  class="css-1ahfdc3-Text e15wbhsk0"
+                >
+                  N/A
+                </p>
+              </div>
+              <div
+                aria-label="No change from Previous Period:"
+                class="woocommerce-summary__item-delta"
+                role="presentation"
+              >
+                <p
+                  class="css-1qmnemh-Text e15wbhsk0"
+                >
+                  N/A
+                </p>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li
+          class="woocommerce-summary__item-container"
+        >
+          <div
+            class="woocommerce-summary__item"
+          >
+            <div
+              class="woocommerce-summary__item-label"
+            >
+              <p
+                class="css-101we7g-Text e15wbhsk0"
+              >
+                Pending balance
+              </p>
+            </div>
+            <div
+              class="woocommerce-summary__item-data"
+            >
+              <div
+                class="woocommerce-summary__item-value"
+              >
+                <p
+                  class="css-1ahfdc3-Text e15wbhsk0"
+                >
+                  N/A
+                </p>
+              </div>
+              <div
+                aria-label="No change from Previous Period:"
+                class="woocommerce-summary__item-delta"
+                role="presentation"
+              >
+                <p
+                  class="css-1qmnemh-Text e15wbhsk0"
+                >
+                  N/A
+                </p>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li
+          class="woocommerce-summary__item-container"
+        >
+          <div
+            class="woocommerce-summary__item"
+          >
+            <div
+              class="woocommerce-summary__item-label"
+            >
+              <p
+                class="css-101we7g-Text e15wbhsk0"
+              >
+                Available balance
+              </p>
+            </div>
+            <div
+              class="woocommerce-summary__item-data"
+            >
+              <div
+                class="woocommerce-summary__item-value"
+              >
+                <p
+                  class="css-1ahfdc3-Text e15wbhsk0"
+                >
+                  N/A
+                </p>
+              </div>
+              <div
+                aria-label="No change from "
+                class="woocommerce-summary__item-delta"
+                role="presentation"
+              >
+                <p
+                  class="css-1qmnemh-Text e15wbhsk0"
+                >
+                  N/A
+                </p>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+`;
